# srrg_bench

./: CMakeLists.txt  README.md  package.xml
src/bda/: CMakeLists.txt  README.md  benchmark_map.cpp  compute_ap.cpp  test_segmentation_segnet.cpp
src/hbst/: CMakeLists.txt  README.md  analyze_completeness_hbst.cpp  analyze_completeness_leafs.cpp  analyze_completeness_monte_carlo.cpp  benchmark.cpp  compute_closure_ground_truth.cpp  live_viewer.cpp
src/hbst/visualization/: closure_viewer.cpp  closure_viewer.h  map_viewer.cpp  viewer_bonsai.cpp  viewer_bonsai.h
src/matchers/: CMakeLists.txt  base_matcher.hpp  bow_matcher.cpp  bow_matcher.h  bruteforce_matcher.cpp  bruteforce_matcher.h  flannhc_matcher.cpp  flannhc_matcher.h  flannlsh_matcher.cpp  flannlsh_matcher.h  hbst_matcher.cpp  hbst_matcher.h  ibow_matcher.cpp  ibow_matcher.h
src/srrg_hbst/: CMakeLists.txt  README.md  analyze_completeness.cpp  analyze_completeness_hbst.cpp  analyze_completeness_leafs.cpp  analyze_completeness_monte_carlo.cpp  benchmark.cpp  compute_closure_ground_truth.cpp  live_viewer.cpp
src/srrg_hbst/matchers/: CMakeLists.txt  base_matcher.hpp  bow_matcher.cpp  bow_matcher.h  bruteforce_matcher.cpp  bruteforce_matcher.h  flannhc_matcher.cpp  flannhc_matcher.h  flannlsh_matcher.cpp  flannlsh_matcher.h  hbst_matcher.cpp  hbst_matcher.h  ibow_matcher.cpp  ibow_matcher.h
src/srrg_hbst/utilities/: CMakeLists.txt  command_line_parameters.cpp  command_line_parameters.h  loop_closure_evaluator.cpp  loop_closure_evaluator.h
src/srrg_hbst/visualization/: CMakeLists.txt  closure_viewer.cpp  closure_viewer.h  map_viewer.cpp  map_viewer.h  viewer_bonsai.cpp  viewer_bonsai.h
src/utilities/: CMakeLists.txt  command_line_parameters.cpp  command_line_parameters.h  loop_closure_evaluator.cpp  loop_closure_evaluator.h
